--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,55 @@
+#content table td {
+      padding: 6px 10px;
+}
+#content table {
+      margin-top: 8px;
+}
+tr.section {
+      background: #ddd !important;
+      transition: none;
+}
+tr.section td {
+      color: #000 !important;
+      font-weight: bold;
+      border-bottom: 3px solid #607d8b;
+      text-align: center !important;
+      transition: none;
+}
+tr.section:hover td {
+      background: #ddd !important;
+}
+
+
+.col {
+      width: 33%;
+      float: left;
+}
+@media screen and (max-width: 700px) {
+      .col {
+            width: 100%;
+            float: none;
+      }
+}
+#footer {
+      background: #333;
+      padding: 20px;
+      margin: 30px -50px 100px -50px;
+}
+#footer .col {
+      width: 30%;
+      margin: 0 1.5%;
+}
+#footer p {
+      color: #aaa !important;
+      text-align: center;
+}
+#footer p a {
+      color: #eee !important;
+}
+#footer p.link {
+      text-align: center;
+}
+
 input[type="text"], textarea, input[type="number"], input[type="datetime-local"] {
        width: 300px;
        max-width: 100%;
@@ -45,9 +97,9 @@ input[type="file"] {
 }
 .file label {
        display: table;
-       background: #e83d84;
+       background: #78909c;
        border: none;
-       border-bottom: 4px solid #c2175e;
+       border-bottom: 4px solid #607d8b;
        text-transform: uppercase;
        font-weight: bold;
        font-size: 13px;
@@ -282,14 +334,33 @@ input[type="date"], input[type="time"] {
 
 
 
-
+table {
+      width: 100%;
+}
+table th {
+      padding: 10px;
+      text-align: right;
+}
+table thead th {
+      text-align: left;
+      white-space: nowrap;
+}
 
 #content #budget table.budget {
 	width: 100%;
 	border: none;
+	transition: all 0s !important;
+}
+
+#content #budget table.budget * {
+	transition: all 0s !important;
 }
 
 #content #budget table.budget td {
+	padding: 7px 15px 7px 15px;
+}
+
+#content #budget table.budget.edit td {
 	padding: 2px 15px 2px 0;
 }
 
@@ -298,24 +369,33 @@ input[type="date"], input[type="time"] {
 	border-bottom: 1px solid #eee;
 }
 
+#content #budget table.budget tr.space td {
+	padding: 15px 0;
+}
+
 #content #budget table.budget thead th {
 	font-size: 1.3em;
-	padding: 15px;
+	padding: 15px 0 15px 15px;
 	font-weight: bold;
+      background: #b0bec5;
+      color: #263238;
 }
 
 #content #budget table.budget tr:hover td, #content #budget table.budget tr.suggestion td {
-	background: #eceff1;
+      background: #eceff1;
+}
+
+#content #budget table.budget tr.space td {
+      background: #fff !important;
 }
 
 #content #budget table.budget tr.deleted {
 	display: none;
 }
 
-#content #budget table.budget td.cash {
+#content #budget table.budget td.cash, #content #budget table.budget th.cash {
 	text-align: right;
 	position: relative;
-	padding: 0px !important;
 }
 
 #content #budget table.budget .cash .unit {
@@ -324,14 +404,33 @@ input[type="date"], input[type="time"] {
 }
 
 #content #budget table.budget .cash .input {
-	margin-right: 32px;
+	margin-right: 22px;
+      white-space: nowrap;
 }
 
 #content #budget table.budget tr.header td {
-	background: #b0bec5;
-	color: #fff;
-	font-size: 1.1em;
-	padding: 10px 7px;
+      background: #cfd8dc;
+      color: #37474f;
+      font-size: 1.1em;
+      padding: 10px 2px;
+}
+
+#content #budget table.budget tr.header td .input {
+      margin: 0 0 0 14px;
+}
+
+#content #budget table.budget tr.header td.name:first-child {
+      
+}
+
+#content #budget table.budget tr.header td.name:first-child input {
+      padding: 9px 15px !important;  
+      margin: -10px 0 -10px -20px !important;    
+}
+
+#content #budget table.budget tr.header td.accounts.speedledger-id input {
+      padding: 9px 15px !important;  
+      margin: -10px 0 -10px -20px !important;
 }
 
 #content #budget table.budget .select {
@@ -359,14 +458,16 @@ input[type="date"], input[type="time"] {
 	box-shadow: none !important;
 	color: inherit;
 	border-radius: 0 !important;
-	margin: -10px 0 !important;
+	margin: -10px -10px -10px 0 !important;
 	padding: 7px 15px !important;
+	float: right;
 }
 
 #content #budget table.budget .cash input[type="text"] {
 	text-align: right;
 	padding: 7px 35px 7px 15px !important;
-	margin: -7px 5px -7px 0 !important;
+	margin: -7px -13px -7px 0 !important;
+	float: right;
 }
 
 #content #budget table.budget input[type="text"].speedledger-id {
@@ -380,47 +481,62 @@ input[type="date"], input[type="time"] {
 }
 
 #content #budget table.budget .plus {
-	color: #4CAF50 !important;
+      color: #4CAF50 !important;
 }
 
 #content #budget table.budget .minus {
-	color: #e57373 !important;
+      color: #e57373 !important;
 }
 
 
 #content #budget table.budget ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color: #aaa;
+    color: #666;
 }
 #content #budget table.budget :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color: #aaa;
+   color: #666;
    opacity: 1;
 }
 #content #budget table.budget ::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color: #aaa;
+   color: #666;
    opacity: 1;
 }
 #content #budget table.budget :-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color: #aaa;
+   color: #666;
 }
 #content #budget table.budget ::-ms-input-placeholder { /* Microsoft Edge */
-   color: #aaa;
+   color: #666;
 }
 
 .loading {
+	display: block;
+	transition: all 0s;
 	width: 30px;
 	height: 20px;
 	background-image: url('/images/loading.gif');
 	background-repeat: no-repeat;
 	background-size: 30px 20px;
-	margin: 7px -30px -27px 0;
+	margin: -9px -20px -18px -30px;
+}
+
+
+table tfoot th {
+      padding: 10px 15px;
+      border-top: 3px solid #78909c !important;
 }
 
 
 
 
-
-
-
+@media screen and (max-width: 900px) {
+      .accounts {
+            display: none;
+      }
+}
+@media screen and (max-width: 600px) {
+      .col-expenses, .col-income {
+            display: none !important;
+      }
+}
 
 
 
