--- a/public/css/print.css
+++ b/public/css/print.css
@@ -8,6 +8,11 @@ table td, table th {
 	font-size: 10pt !important;
 	padding: 10px;
 	white-space: nowrap;
+	width: 100%;
+	border: 1px solid #ddd;
+}
+table th {
+	background: #eee;
 }
 .committee td {
 	background: #b0bec5 !important;
@@ -17,6 +22,21 @@ table td, table th {
 }
 table {
 }
+.cash {
+	text-align: right;
+}
 .old {
 	opacity: 0.5;
+}
+.nochange {
+	opacity: 0.4;
+}
+.content {
+	margin: 0 auto;
+	max-width: 1000px;
+}
+@media print {
+	.content {
+		max-width: none;
+	}
 }
