--- a/public/css/style.css
+++ b/public/css/style.css
@@ -554,6 +554,12 @@ table tfoot th {
       padding: 10px 15px;
       border-top: 3px solid #78909c !important;
 }
+table th.sum {
+      border-left: 3px solid #78909c !important;
+      border-bottom: 3px solid #78909c !important;
+      border-right: 3px solid #78909c !important;
+      text-align: center !important;
+}
 
 
 
