--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,10 +326,10 @@ input[type="date"], input[type="time"] {
        opacity: 1;
  }
  .radio input[type=radio]:checked + label:before {
-       background: #ec5f99;
+       background: #607d8b;
  }
  .radio input[type=radio]:checked + label {
-       color: #ec5f99;
+       color: #607d8b;
  }
  input[type=radio] {
        visibility: hidden;
@@ -381,7 +381,7 @@ table thead th {
 }
 
 #content #budget table.budget td {
-	padding: 7px 15px 7px 15px;
+	padding: 5px 15px 5px 15px;
 }
 
 #content #budget table.budget.edit td {
@@ -394,12 +394,13 @@ table thead th {
 }
 
 #content #budget table.budget tr.space td {
-	padding: 15px 0;
+	padding: 7px 0;
+      border-bottom: none;
 }
 
 #content #budget table.budget thead th {
 	font-size: 1.3em;
-	padding: 15px 0 15px 15px;
+	padding: 10px 0 10px 15px;
 	font-weight: bold;
       background: #b0bec5;
       color: #263238;
@@ -436,7 +437,7 @@ table thead th {
       background: #cfd8dc;
       color: #37474f;
       font-size: 1.1em;
-      padding: 10px 2px;
+      padding: 7px 2px;
 }
 
 #content #budget table.budget tr.header td .input {
